tests/regression/errors/basic/import_error_8.csd
// Import error test 8
yeet "nonexistent_module_8"
sus result drip = some_function(8)
